[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Monster.gd" type="Script" id=1]
[ext_resource path="res://addons/xsm/state.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MonsterStates/FollowNode.gd" type="Script" id=3]
[ext_resource path="res://Scripts/MonsterStates/MoveOnPath.gd" type="Script" id=4]
[ext_resource path="res://Scripts/MonsterStates/MoveToPath.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Scripts/MonsterStates/FollowPath.gd" type="Script" id=7]
[ext_resource path="res://Scripts/MonsterStates/BaseState.gd" type="Script" id=8]
[ext_resource path="res://Scripts/MonsterStates/GoToNode.gd" type="Script" id=9]
[ext_resource path="res://Scripts/MonsterStates/ChargeDecay.gd" type="Script" id=10]
[ext_resource path="res://Assets/RingSheet.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=2]
radius = 35.0

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[node name="Monster" type="KinematicBody2D" groups=["Monster"]]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )
speed = 100

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
history_size = 0
fsm_owner = NodePath("")
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="BaseState" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("MoveToPath")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("MoveToPath")

[node name="MoveOnPath" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("MoveToPath")

[node name="MoveToPath" type="Node" parent="StateMachine/MoveOnPath"]
script = ExtResource( 5 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="MoveOnPath" type="Node" parent="StateMachine/MoveOnPath"]
script = ExtResource( 7 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("")

[node name="FollowNode" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("GoToNode")

[node name="ChargeNode" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("GoToNode")

[node name="GoToNode" type="Node" parent="StateMachine/ChargeNode"]
script = ExtResource( 9 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../GoToNode")

[node name="ChargeDecay" type="Node" parent="StateMachine/ChargeNode"]
script = ExtResource( 10 )
disabled = false
debug_mode = false
timed = false
next_state = NodePath("../GoToNode")

[node name="ChargeCooldown" type="Node" parent="StateMachine/ChargeNode"]
script = ExtResource( 2 )
disabled = false
debug_mode = false
timed = true
waiting_time = 1.0
on_timer_finished = 3
next_state = NodePath("../GoToNode")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="VisualizerParticles" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( -0.5, -0.5 )
amount = 2
process_material = SubResource( 4 )
texture = ExtResource( 11 )
